--- a/src/pages/UserDashboard/userdash/dash.css
+++ b/src/pages/UserDashboard/userdash/dash.css
@@ -1,7 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Matemasie&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+.dashboard{
+    width: 810px;
+    height: 500px;
+    border: 1px solid #cecfd4;
+    border-radius: 5px;
+    padding: 20px;
 }
+
+.dashboard> h4{
+    font-family: "Nunito Sans", serif;
+    color: #080f34;
+    font-size: 20px;
+}
+/* #080f34 */
+/* font-family: "Nunito Sans", serif; */
