commented user-icons

--- a/src/pages/Article/article.css
+++ b/src/pages/Article/article.css
@@ -104,10 +104,10 @@
     font-size: 16px;
     color:rgb(119, 119, 119);
 }
-.user-icons{
+/* .user-icons{
     font-size: 20px;
     color:rgb(119, 119, 119) ;
-}
+} */
 .date-cont p{
     font-size: 16px;
     font-weight: 400;
