commented count.css

--- a/src/pages/Count/count.css
+++ b/src/pages/Count/count.css
@@ -8,10 +8,10 @@
 .sec-counts{
     width: 240.83px;
 }
-.sec-countsss{
+/* .sec-countsss{
     width: 300.83px;
     padding-left: 50px;
-}
+} */
 .sec-count{
     width: 320.83px;
     border-right: 1px solid rgb(114, 90, 249);
