--- a/src/pages/Footer/footer.css
+++ b/src/pages/Footer/footer.css
@@ -102,9 +102,9 @@
     font-weight: 400;
     color: rgb(119, 119, 119);
 }
-.copy-innerdiv{
+/* .copy-innerdiv{
     display: flex;
     gap: 25px;
     margin-right: 30px;
     font-size: 19px;
-}
+} */
