--- a/src/pages/Header/header.css
+++ b/src/pages/Header/header.css
@@ -127,12 +127,12 @@
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
 }
-.log-btn:hover{
+/* .log-btn:hover{
     background-color: rgb(85, 60, 223);
     color: white;
     transition: .4s ease-in-out;
     cursor: pointer;
-}
+} */
 .dashboard-btn{
     width: 123.792px;
     height: 39.3px;
