--- a/src/pages/Know/know.css
+++ b/src/pages/Know/know.css
@@ -146,11 +146,11 @@
     cursor: pointer;
     border: 1px solid rgb(85, 60, 223);
 }
-/* .prof-cir{
+.prof-cir{
     display: flex;
     align-items: center;
     gap: 20px;
-} */
+}
 .prof-cir img{
     width: 68.3px;
     object-fit: contain;
