--- a/src/pages/Study/study.css
+++ b/src/pages/Study/study.css
@@ -6,11 +6,11 @@
     padding-top: 110px;
     padding-left: 19px;
 }
-.boy-girl{
+/* .boy-girl{
     display: flex;
     gap: 20px;
     position: relative;
-}
+} */
 .cycle-logo{
 }
 .cycle-logo img{
